--- a/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
@@ -5,7 +5,7 @@
 
 
         <h1>Edit Recipe</h1>
-        <form action="{% url 'recipe_edit' recipe.slug %}" method="post">
+        <form action="{% url 'recipe_edit' recipe.slug %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
 
 
