--- a/MommysCookbookProject/user_auth/templates/user_auth/user_details.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_details.html
@@ -8,6 +8,9 @@
     <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="{{ user.profile_picture.url }}" alt="Profile image">
         <div class="card-body">
+        <p>
+            <a href="{% url 'user_change_picture' %}" class="btn btn-secondary btn-sm text-light mb-2">Change profile picture</a>
+        </p>
             {% if user.screen_name %}
             <h5 class="card-title">{{ user.screen_name }}</h5>
             {% endif %}
