--- a/MommysCookbookProject/user_auth/templates/user_auth/user_edit.html
+++ b/MommysCookbookProject/user_auth/templates/user_auth/user_edit.html
@@ -3,36 +3,46 @@
 
 {% block main-content %}
 
-    <h3 class="m-5"> Edit profile</h3>
-    <a href="{% url 'user_change_password' %}" class="btn btn-dark btn-sm text-light"> Change password </a>
-    <a href="{% url 'user_delete' %}" class="btn btn-danger btn-sm text-light"> Delete profile </a>
-    <form action="{% url 'user_edit' %}" method="post" class="m-4">
+    <h3> Edit profile</h3>
+        <div class="card" style="width: 18rem;">
+        <img class="card-img-top"
+             src="{{ user.profile_picture.url }}"
+             alt="Profile image">
+
+        <div class="card-body">
+            <a href="{% url 'user_change_picture' %}" class="btn btn-secondary btn-sm text-light mb-2">Change profile picture</a>
+            <br>
+            <a href="{% url 'user_change_password' %}" class="btn btn-dark btn-sm text-light">Change password</a>
+            <a href="{% url 'user_delete' %}" class="btn btn-danger btn-sm text-light"> Delete profile </a>
+            <form action="{% url 'user_edit' %}" method="post" class="m-4" enctype="multipart/form-data">
 
 
-        <div class="form-group mb-2">
-            <label> Username:</label>
-            {{ form.username.errors }}
-            {{ form.username|placeholder:"Enter username"|add_custom_class:"form-control" }}
+                <div class="form-group mb-2">
+                    <label> Username:</label>
+                    {{ form.username.errors }}
+                    {{ form.username|placeholder:"Enter username"|add_custom_class:"form-control" }}
+                </div>
+                <div class="form-group mb-2">
+                    <label> Email:</label>
+                    {{ form.email.errors }}
+                    {{ form.email|placeholder:"Enter email"|add_custom_class:"form-control" }}
+                </div>
+                <div class="form-group mb-2">
+                    <label> Name:</label>
+                    {{ form.screen_name.errors }}
+                    {{ form.screen_name|placeholder:"Enter name"|add_custom_class:"form-control" }}
+                </div>
+
+                <button class="btn btn-secondary">Save changes</button>
+
+                {% csrf_token %}
+            </form>
+
+            <a href="{% url 'user_details' %}" class="btn btn-outline-secondary btn-block">
+                Discard changes and go back to Profile
+            </a>
         </div>
-        <div class="form-group mb-2">
-            <label> Email:</label>
-            {{ form.email.errors }}
-            {{ form.email|placeholder:"Enter email"|add_custom_class:"form-control" }}
         </div>
-        <div class="form-group mb-2">
-            <label> Name:</label>
-            {{ form.screen_name.errors }}
-            {{ form.screen_name|placeholder:"Enter name"|add_custom_class:"form-control" }}
-        </div>
-
-        <button class="btn btn-secondary">Save changes</button>
-
-        {% csrf_token %}
-    </form>
-
-    <a href="{% url 'user_details' %}" class="btn btn-outline-secondary btn-block">
-        Discard changes and go back to Profile
-    </a>
 
 
 {% endblock %}
