--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                     <a class="nav-link" href="{% url 'index' %}"> Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'recipes_list' %}"> Recipes (List) </a>
+                    <a class="nav-link" href="{% url 'recipes_list' %}"> Recipes </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'recipe_create' %}"> Add new recipe </a>
