--- a/MommysCookbookProject/home/templates/home/index.html
+++ b/MommysCookbookProject/home/templates/home/index.html
@@ -49,7 +49,7 @@
             <div class="col-6 col-md">
                 <h5>Recipes with notes</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">
+                    <li><a class="text-muted" href="{% url 'recipes_list' %}">
                         <img src="{% static 'images/recipes.jpg' %}" alt="Recipes" height="300" class="">
                     </a></li>
                 </ul>
